--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,16 @@ header{
     cursor: pointer;
 }
 
+h3{
+    font-weight: lighter;
+    font-family:fantasy;
+}
+
 .texts{
     text-align: justify;
     display: flex;
     flex-wrap: wrap;
+    font-family: cursive;
 }
 
 .lc{
